fix(DATA-1967) : wrong data sent to outbound subscriber